# RiceLeafDisease

./: README.md
ImagePreprocessing/: Preprocess.ipynb  ProcessRiceScald.ipynb  SplitData.ipynb  SuperResolution.ipynb
TestingBeforeUsingUVAstral/: Readnpyfile.ipynb  imagepreprocess.ipynb  test.ipynb  testGPU.ipynb
virtualenvironment/: pyproject.toml  test.ipynb
