[project]
name = "virtualenvironment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "imageai>=3.0.3",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.0",
    "numpy<2",
    "opencv-contrib-python>=4.10.0.84",
    "pandas>=2.2.3",
    "pip>=24.3.1",
    "pipi>=1.0.1",
    "poetry>=2.0.0",
    "scipy>=1.15.0",
    "seaborn>=0.13.2",
    "tensorflow>=2.14.0",
    "torch>=2.5.1",
    "torchaudio>=2.5.1",
    "torchvision>=0.20.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
